# grand-chat

./: .gitignore  Dockerfile  compose.yaml
api/: Dockerfile  entrypoint.sh  pyproject.toml
api/chat/: admin.py  managers.py  mixins.py  models.py  serializers.py  urls.py  views.py
api/chat/migrations/: 0001_initial.py  0002_outbox.py
api/core/: settings.py  urls.py
api/user/: views.py
centrifugo/: config.json
debezium/: debezium-config.json
frontend/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatLayout.tsx
frontend/src/config/: index.ts
frontend/src/contexts/: auth.context.ts  chat.context.ts  csrf.context.ts
frontend/src/pages/: ChatRoomDetail.tsx  ChatRoomList.tsx  ChatSearch.tsx  Login.tsx
frontend/src/reducers/: chat.reducers.ts
frontend/src/services/: auth.service.ts  chat.service.ts  rooms.service.ts
nginx/: nginx.conf
